--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Envelope Screen -->
   <div id="envelope-container">
     <img src="envelope.png" alt="Envelope" id="envelope" />
-    <p>♡ Letter for my iffat ♡</p>
+    <p>♡ Letter for my Iffat ♡</p>
   </div>
 
   <!-- Letter Screen -->
@@ -37,7 +37,7 @@
       </div>
 
       <p id="final-text" class="final-text" style="display: none">
-        <strong>Thank you for saying yes iffat 🥹 you just made me so happy.</strong>
+        <strong>Thank you for saying yes Iffat 🥹 you just made me so happy.</strong>
       </p>
     </div>
   </div>
